[gd_scene load_steps=4 format=3 uid="uid://c76wd8iwrix3h"]

[ext_resource type="Script" path="res://scenes/title_scene.gd" id="1_fopmr"]
[ext_resource type="PackedScene" uid="uid://b5hiemgtytg3" path="res://scenes/bg_root.tscn" id="2_aj1vx"]
[ext_resource type="AudioStream" uid="uid://bupa8c651w15b" path="res://art/assets/music/the_enchanged_land_fantasy_music_pack/Calm_Music_I_Loop.wav" id="3_kywit"]

[node name="title_scene" type="Node2D"]
script = ExtResource("1_fopmr")

[node name="ui_root" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="ui_root"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="bg_root" parent="ui_root/ui" instance=ExtResource("2_aj1vx")]
layout_mode = 1
offset_left = 345.0
offset_top = 470.0
offset_right = 345.0
offset_bottom = 470.0
scale = Vector2(0.5, 0.5)
metadata/_edit_use_anchors_ = true

[node name="title_card" type="Control" parent="ui_root/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = -238.0
offset_right = -276.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="panel" type="PanelContainer" parent="ui_root/ui/title_card"]
layout_mode = 0
offset_left = -18.0
offset_top = -15.0
offset_right = 665.0
offset_bottom = 211.0
theme_type_variation = &"PanelLargeSticker"

[node name="vbox" type="VBoxContainer" parent="ui_root/ui/title_card/panel"]
layout_mode = 2

[node name="title" type="Label" parent="ui_root/ui/title_card/panel/vbox"]
layout_mode = 2
theme_type_variation = &"HeaderXLarge"
text = "Sticker Book"
horizontal_alignment = 1

[node name="subtitle" type="Label" parent="ui_root/ui/title_card/panel/vbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderMedium"
text = "Time Attack"

[node name="play" type="Control" parent="ui_root/ui"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.591049
anchor_right = 0.5
anchor_bottom = 0.591049
offset_left = -57.0
offset_top = -20.0
offset_right = -17.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="btn" type="Button" parent="ui_root/ui/play"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = " Play "

[node name="options_btn" type="Button" parent="ui_root/ui"]
layout_mode = 0
offset_left = 5.0
offset_top = 563.0
offset_right = 196.0
offset_bottom = 638.0
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="stats_btn" type="Button" parent="ui_root/ui"]
layout_mode = 0
offset_left = 1004.0
offset_top = 561.0
offset_right = 1127.0
offset_bottom = 636.0
text = "stats"

[node name="author" type="Control" parent="ui_root/ui"]
anchors_preset = 0
offset_left = 467.0
offset_top = 578.0
offset_right = 507.0
offset_bottom = 618.0

[node name="gamedev" type="PanelContainer" parent="ui_root/ui/author"]
layout_mode = 0
offset_top = -74.0
offset_right = 218.0
offset_bottom = -26.0
theme_type_variation = &"PanelSmallSticker"

[node name="label" type="Label" parent="ui_root/ui/author/gamedev"]
layout_mode = 2
text = "a majorziploc game"

[node name="music_composer" type="PanelContainer" parent="ui_root/ui/author"]
layout_mode = 0
offset_left = -62.0
offset_right = 275.0
offset_bottom = 48.0
theme_type_variation = &"PanelSmallSticker"

[node name="label" type="Label" parent="ui_root/ui/author/music_composer"]
layout_mode = 2
text = "music by oliverkovacscomposer"

[node name="mobile" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="checkbox" type="CheckBox" parent="ui_root/ui/mobile"]
layout_mode = 2

[node name="panel" type="PanelContainer" parent="ui_root/ui/mobile"]
layout_mode = 2
theme_type_variation = &"PanelSmallSticker"

[node name="label" type="Label" parent="ui_root/ui/mobile/panel"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "mobile?"

[node name="music_on" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_left = 922.0
offset_right = 1152.0
offset_bottom = 75.0

[node name="panel" type="PanelContainer" parent="ui_root/ui/music_on"]
layout_mode = 2
theme_type_variation = &"PanelSmallSticker"

[node name="label" type="Label" parent="ui_root/ui/music_on/panel"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "music?"

[node name="checkbox" type="CheckBox" parent="ui_root/ui/music_on"]
layout_mode = 2

[node name="cam" type="Camera2D" parent="."]
position = Vector2(830, 361)
zoom = Vector2(0.5, 0.5)

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kywit")

[connection signal="button_up" from="ui_root/ui/play/btn" to="." method="_on_play_btn_button_up"]
[connection signal="button_up" from="ui_root/ui/options_btn" to="." method="_on_options_btn_button_up"]
[connection signal="button_up" from="ui_root/ui/stats_btn" to="." method="_on_stats_btn_button_up"]
[connection signal="toggled" from="ui_root/ui/mobile/checkbox" to="." method="_on_mobile_checkbox_toggled"]
[connection signal="toggled" from="ui_root/ui/music_on/checkbox" to="." method="_on_music_checkbox_toggled"]
